--- a/app/src/main/res/layout/activity_grafik_suhu.xml
+++ b/app/src/main/res/layout/activity_grafik_suhu.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/backgroundgradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GrafikSuhu">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/chart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
