--- a/app/src/main/res/layout/view_design.xml
+++ b/app/src/main/res/layout/view_design.xml
@@ -24,6 +24,44 @@
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/iddev"
+                android:layout_width="111dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="250dp"
+                android:text="ID Device : "
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tgl"
+            android:layout_width="111dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="250dp"
+            android:text="Tanggal : "
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/termo"
                 android:layout_width="50dp"
@@ -35,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:layout_marginRight="180dp"
+                android:layout_marginRight="181dp"
                 android:text="Suhu :"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -69,8 +107,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:layout_marginRight="115dp"
-                android:text="Kelembaban :"
+                android:layout_marginRight="96dp"
+                android:text="Detak Jantung :"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
