--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -6,6 +6,10 @@
     android:orientation="vertical"
     android:background="@drawable/backgroundgradient">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeToRefresh"
+        android:layout_width = "match_parent"
+        android:layout_height = "match_parent">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/datalist"
         android:layout_width="match_parent"
@@ -17,5 +21,5 @@
         app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
         app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
         />
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
